infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphql-api
  name: graphql-api
spec:
  selector:
    matchLabels:
      app: graphql-api
  replicas: 3
  template:
    metadata:
      labels:
        app: graphql-api
    spec:
      containers:
      - name: graphql-api
        image: asia.gcr.io/elsoul2/graphql-api:0.0.1
        ports:
          - containerPort: 3000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 2000Mi
          requests:
            cpu: 300m
            memory: 1500Mi
        volumeMounts:
        - name: grpc-td-conf
          mountPath: /tmp/grpc-xds/
      volumes:
      - name: grpc-td-conf
        emptyDir:
          medium: Memory
