infra/hello.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: client
  name: sleeper
spec:
  selector:
    matchLabels:
      run: client
  template:
    metadata:
      labels:
        run: client
    spec:
      containers:
        - image: openjdk:8-jdk
          imagePullPolicy: IfNotPresent
          name: sleeper
          command:
            - sleep
            - 365d
          resources:
            limits:
              cpu: "2"
              memory: 2000Mi
            requests:
              cpu: 300m
              memory: 1500Mi
          volumeMounts:
            - name: grpc-td-conf
              mountPath: /tmp/grpc-xds/
      volumes:
        - name: grpc-td-conf
          emptyDir:
            medium: Memory
