infra/service.yml
kind: Service
apiVersion: v1
metadata:
  name: souls-api-service
spec:
  selector:
    app: souls-api
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
