infra/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: souls-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: souls-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: souls-ssl
spec:
  rules:
  - host: souls-api.el-soul.com
    http:
      paths:
      - backend:
          serviceName: souls-api-service
          servicePort: 80
